# solar-energy-system-backend

./: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  example.env  pyproject.toml  requirements.txt  run.py
src/: run.py  settings.py
src/accounts/: domain.py  exceptions.py  models.py  repository.py  router.py  schemas.py  services.py  unit_of_work.py
src/auth/: auth_bearer.py  exceptions.py  router.py  schemas.py  services.py  utils.py
src/core/: models.py  pagination.py  repository.py  repository_factory.py  scheduler.py  schemas.py  singleton.py  unit_of_work.py
src/core/middlewares/: pagination.py
src/database/: __init__.py
src/database/migrations/models/: 0_20230601180531_init.py  0_20230604154323_init.py  10_20230626173146_device_tilt.py  11_20230626211401_project_photo.py  (+10 more)
src/device_energies/: domain.py  exceptions.py  models.py  router.py  schemas.py  services.py  unit_of_work.py
src/device_types/: domain.py  exceptions.py  models.py  router.py  schemas.py  unit_of_work.py
src/devices/: domain.py  exceptions.py  models.py  router.py  schemas.py  services.py  unit_of_work.py
src/entrypoints/: app.py  utils.py
src/location_weather/: domain.py  models.py  router.py  services.py  unit_of_work.py
src/locations/: domain.py  exceptions.py  models.py  router.py  schemas.py  services.py  tasks.py  unit_of_work.py
src/projects/: domain.py  exceptions.py  models.py  router.py  schemas.py  services.py  unit_of_work.py
src/reports/: domain.py  exceptions.py  models.py  router.py  schemas.py  services.py  unit_of_work.py
